@@ -3,15 +3,16 @@ Section: elliptic_curves
 C-Name: hyperellratpoints
 Prototype: GGD0,L,
 Help: hyperellratpoints(X,h,{flag=0}): X being a non-singular hyperelliptic
- curve given by an integral model, return a vector containing the affine rational points on the curve
- of naive height less than h.
+ curve given by an rational model, return a vector containing the affine
+ rational points on the curve of naive height less than h.
  If fl=1, stop as soon as a point is found.
  X can be given either by a squarefree polynomial P such that
  X:y^2=P(x) or by a vector [P,Q] such that X:y^2+Q(x)y=P(x) and Q^2+4P is
  squarefree.
-Doc: $X$ being a non-singular hyperelliptic curve given by an integral model,
- return a vector containing the affine rational points on the curve of naive height less than $h$.
- If $\fl=1$, stop as soon as a point is found; return either an empty vector or a vector containing a single point.
+Doc: $X$ being a non-singular hyperelliptic curve given by an rational model,
+ return a vector containing the affine rational points on the curve of naive
+ height less than $h$.a  If $\fl=1$, stop as soon as a point is found; return
+ either an empty vector or a vector containing a single point.
 
  $X$ is given either by a squarefree polynomial $P$ such that $X: y^2=P(x)$
  or by a vector $[P,Q]$ such that $X: y^2+Q(x)\*y=P(x)$ and $Q^2+4\*P$ is
