@@ -8,6 +8,7 @@
 183
 137
 127
+63
 [[-5, 1]]
 []
 [[-3, 0], [-3, -1], [-2, 3], [-2, -4], [-1, 3], [-1, -4], [0, 2], [0, -3], [
@@ -23,7 +24,9 @@
 886754]]
 470
 8
+8
+2
   ***   at top-level: E=ellinit([0,0,1,-7,6]);ellratpoints(E,[10^5,[
   ***                                         ^----------------------
   *** ellratpoints: incorrect type in hyperellratpoints (t_VEC).
-Total time spent: 84
+Total time spent: 96
