@@ -248,6 +248,7 @@ AP  52- new GP function bnrclassfield
 HC  53- implement lfunmfspec in odd weight
 HC  54- new GP functions ellE and ellK
     55- [libpari] maxprimeN
+BA  56- support for rational model in ellratpoints and hyperellratpoints
 
   Removed
      1- member functions .futu and .tufu [deprecated since 2.2]
